--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,17 +10,27 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Project"
-        tools:targetApi="31"
         android:usesCleartextTraffic="true"
-        android:networkSecurityConfig="@xml/network_security_config">
+        tools:targetApi="31">
+        <activity
+            android:name="StaffScreen.Bill.BillDetail_MainActivity"
+            android:exported="false" />
+        <activity
+            android:name="StaffScreen.Bill.Bill_MainActivity"
+            android:exported="false" />
+        <activity
+            android:name="StaffScreen.Banking.BankingQR_MainActivity"
+            android:exported="false" />
+        <activity
+            android:name="StaffScreen.Banking_MainActivity"
+            android:exported="false" />
         <activity
             android:name="StaffScreen.Menu.Menu_CallAPI_MainActivity"
-            android:exported="false">
-
-        </activity>
+            android:exported="false" />
         <activity
             android:name="StaffScreen.TableDetail.detail_MainActivity"
             android:exported="false" />
@@ -30,11 +40,6 @@
         <activity
             android:name="StaffScreen.profile_MainActivity"
             android:exported="false" />
-        <activity
-            android:name="StaffScreen.menu_MainActivity"
-            android:exported="true">
-
-        </activity>
         <activity
             android:name="StaffScreen.Table.table_MainActivity"
             android:exported="true" />
