--- a/API/HE170242_HaiTD_WebAPI/WebAPI/WebAPI.csproj
+++ b/API/HE170242_HaiTD_WebAPI/WebAPI/WebAPI.csproj
@@ -15,6 +15,7 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.36" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.36" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+		<PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
 	</ItemGroup>
 
   <ItemGroup>
