--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -15,7 +15,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Project"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name="StaffScreen.ChangePass.ChangePass_MainActivity"
+            android:exported="false" />
         <activity
             android:name="StaffScreen.Bill.BillDetail_MainActivity"
             android:exported="false" />
@@ -24,9 +27,6 @@
             android:exported="false" />
         <activity
             android:name="StaffScreen.Banking.BankingQR_MainActivity"
-            android:exported="false" />
-        <activity
-            android:name="StaffScreen.Banking_MainActivity"
             android:exported="false" />
         <activity
             android:name="StaffScreen.Menu.Menu_CallAPI_MainActivity"
@@ -48,7 +48,7 @@
             android:exported="true" />
         <activity
             android:name="Login.login_MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
